Fixed Easter times from extending outside of viewport on mobile

--- a/app-website/less/components/Times.less
+++ b/app-website/less/components/Times.less
@@ -24,6 +24,16 @@
   white-space: nowrap;
 }
 
+@media (max-width: 600px) {
+  .Times-campus--theater,
+  .Times-times--theater {
+    display: block;
+  }
+  .Times-campus--theater {
+    border: none;
+  }
+}
+
 .Times-heading {
   .to-rem(font-size, 19);
   .to-rem(margin-bottom, 10);
